Fix nav z-index & download resume

--- a/src/assets/styles/components/header.css
+++ b/src/assets/styles/components/header.css
@@ -2,6 +2,7 @@ Navbar,
 nav {
 	width: 100%;
 	height: 150px;
+	z-index: 50;
 }
 
 .header-container {
