--- a/src/assets/styles/index.css
+++ b/src/assets/styles/index.css
@@ -2,3 +2,7 @@ body {
   margin: 0;
   font-family: 'Poppins', sans-serif !important;
 }
+
+#root {
+  position: relative;
+}
